Updated My leads page

--- a/templates/leads.html
+++ b/templates/leads.html
@@ -48,10 +48,7 @@
           <option value="New Lead">New Lead</option>
           <option value="Issue in Lead">Issue in Lead</option>
           <option value="Updated">Updated</option>
-          <option value="Pending Outreach">Pending Outreach</option>
-          <option value="Texted / Call Done">Texted / Call Done</option>
-          <option value="In Progress">In Progress</option>
-          <option value="Done">Done</option>
+          <option value="Done">Done (Move to All Leads)</option>
         </select>
         <button class="btn btn-primary" type="submit">Apply to Selected</button>
       </div>
